<resources>
    <string name="app_name">My Application</string>
    <string name="Main">Welcome To MyApp</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="LoginPageHeader">Login</string>
    <string name="LoginName">Name</string>
    <string name="LoginAge">Age</string>
    <string name="LoginEmail">Email</string>
    <string name="LoginPass">Password</string>
    <string name="LoginButton">Login</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
