<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="225dp"
        android:layout_height="129dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/Main"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_below="@id/textView"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Login" />

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_below="@id/btn_Login"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Register" />


</RelativeLayout>