<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/lbl_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/LoginPageHeader"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lbl_Header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_Name"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/LoginName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lbl_Age"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/LoginAge"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lbl_Email"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/LoginEmail"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lbl_Password"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/LoginPass"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txt_Name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="2dp"
                        android:fontFamily="sans-serif"
                        android:hint="Name"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_Age"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginTop="20dp"
                        android:ems="10"
                        android:hint="age"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/txt_Email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="2dp"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="email"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_Password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="2dp"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/Login_Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/LoginButton"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/out_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>